duniverse/menhirLib.20200211/test/static/bad/invalid-declarations-c.exp
File "invalid-declarations-c.mly", line 6, characters 6-7:
Error: syntax error after '%type' and before '('.
Ill-formed declaration.
Examples of well-formed declarations:
  %type <Syntax.expression> expression
  %type <int> date time
  %type <int option> option(date)
  %on_error_reduce expression
  %on_error_reduce date time
  %on_error_reduce option(date)
